# apps/backend/src/nh_ad_backend/standards_openapi.py
@@ -117,12 +117,16 @@ STANDARDS_OPENAPI: dict[str, Any] = {
                     "WEB_PRODUCT_PAGE",
                     "EVENT_PAGE",
                     "SOCIAL_MEDIA",
+                    "SEARCH_AD",
+                    "POPUP",
                     "VIDEO",
                     "EMAIL",
                     "OUTDOOR",
                     "PRINT_AD",
                     "PUSH",
                     "SMS",
+                    "LMS",
+                    "MMS",
                     "ALIMTALK",
                     "OTHER",
                 ],
